# my-telegram

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  architecture.md  config.json  plan.md  提问汇总.md
database/: init_user_system.sql
protos/: messages.proto
src/: main.cpp
src/config/: config.cpp  config.h
src/database/: database_manager.cpp  database_manager.h
src/protocol/: protocol_handler.cpp  protocol_handler.h
src/router/: login_handler.cpp  login_handler.h  message_handler.cpp  message_handler.h  message_router.cpp  message_router.h  register_handler.cpp  register_handler.h
src/server/: server.cpp  server.h  session.cpp  session.h  session_manager.cpp  session_manager.h
src/user/: user_manager.cpp  user_manager.h
tests/: CMakeLists.txt  dependency_test.cpp  test_client.py  test_router.py  test_user_system.py
tests/protos/: messages_pb2.py
